fix(ouiSelect): fix text alignment on dropdown button

--- a/packages/oui-ui-select/_mixins.less
+++ b/packages/oui-ui-select/_mixins.less
@@ -22,6 +22,7 @@
     }
 
     .@{button-dropdown-selector} {
+      text-align: left;
       max-width: @oui-ui-select-button-dropdown-max-width;
     }
 
